--- a/fe/src/components/Navbar/Navbar.scss
+++ b/fe/src/components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 $transition-duration: 0.3s;
 $nav-shadow: rgba(0, 0, 0, 0.4) 0 4px 4px, rgba(0, 0, 0, 0.3) 0 7px 13px -3px, rgba(0, 0, 0, 0.2) 0 -5px 0 inset;
-$icon-background-color: #afd526;
+$icon-background-color: #5061AD;
 $icon-shadow: rgba(0, 0, 0, 0.25) 0 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0 0 0 1px inset;
 
 nav {
@@ -57,6 +57,7 @@ nav {
       transition: all $transition-duration ease-out;
       z-index: 1;
       padding: 0.5rem;
+      background-color: #758FFF;
     }
 
     p {
